add some method to DatabaseService